--- a/home.html
+++ b/home.html
@@ -198,23 +198,25 @@ body{
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
 const SUPABASE_URL = 'https://dfzshvldanqfvfivjrqi.supabase.co'
-const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA'
+const SUPABASE_KEY = 'YOUR_SUPABASE_ANON_KEY'
 const supabase = createClient(SUPABASE_URL, SUPABASE_KEY)
 
 const storageProfileKey = 'hc_profile'
 const DRIVE_FILE_NAME = 'chat.json'
 
+// Check profile
 const profile = JSON.parse(localStorage.getItem(storageProfileKey) || 'null')
-if(!profile){ location.href='register.html'; throw new Error('no profile') }
+if(!profile){ location.href='register.html'; throw new Error('No profile found') }
 
 const myId = profile.id
 const myName = profile.name
-const myAvatar = profile.avatar || 'https://ui-avatars.com/api/?name=' + encodeURIComponent(profile.name)
+const myEmail = profile.email || ''
+const myAvatar = profile.avatar || 'https://ui-avatars.com/api/?name=' + encodeURIComponent(myName)
 const DRIVE_TOKEN = profile.token || null
 let DRIVE_FILE_ID = null
-let chatStore = {} // will be fetched from Drive
+let chatStore = {} // main Drive database
 
-// DOM references
+// DOM
 const contactsEl = document.getElementById('contacts')
 const searchEl = document.getElementById('search')
 const addBtn = document.getElementById('addBtn')
@@ -227,84 +229,125 @@ const messagesEl = document.getElementById('messages')
 const messageInput = document.getElementById('messageInput')
 const sendBtn = document.getElementById('sendBtn')
 const attachBtn = document.getElementById('attach')
+const yourChatsTab = document.getElementById('tab-chats')
+const onlineUsersTab = document.getElementById('tab-online')
 
 let online = {}
-let currentPeer = null
 let pcMap = {}
 let dcMap = {}
+let currentPeer = null
 
+// Initialize profile display
 document.getElementById('myAvatar').src = myAvatar
 document.getElementById('myName').textContent = myName
 
-searchEl.addEventListener('input', ()=>renderContacts(searchEl.value.trim()))
+// Tabs switching
+yourChatsTab.addEventListener('click', ()=>renderContacts('chats'))
+onlineUsersTab.addEventListener('click', ()=>renderContacts('online'))
+
+// Search
+searchEl.addEventListener('input', ()=>renderContacts())
+
+// Logout
+logoutBtn.addEventListener('click', ()=>{
+  localStorage.removeItem(storageProfileKey)
+  location.href='register.html'
+})
+
+// Add Contact
 addBtn.addEventListener('click', ()=> {
   const id = searchEl.value.trim()
   if(!id || id===myId) return
-  if(!online[id]) online[id] = { uuid:id, name:'Contact', avatar:'https://ui-avatars.com/api/?name=User' }
+  if(!online[id]) online[id] = { uuid:id, name:'Contact', avatar:'https://ui-avatars.com/api/?name=User', email:'unknown', lastSeen:0, typing:false }
   renderContacts()
 })
-logoutBtn.addEventListener('click', ()=> { localStorage.removeItem(storageProfileKey); location.reload() })
 
 // Render contacts
-function renderContacts(filter=''){
-  contactsEl.innerHTML=''
-  const list = Object.values(online).filter(u=>u.uuid!==myId)
+function renderContacts(type=''){
+  contactsEl.innerHTML = ''
+  const users = Object.values(online)
+  let list = []
+  if(type==='chats'){
+    list = users.filter(u => chatStore[u.uuid]?.messages?.length)
+  } else if(type==='online'){
+    list = users.filter(u => u.uuid!==myId)
+  } else {
+    list = users
+  }
+
   list.sort((a,b)=>{
-    const at = (chatStore[a.uuid]?.slice(-1)[0]?.ts)||0
-    const bt = (chatStore[b.uuid]?.slice(-1)[0]?.ts)||0
-    return bt-at
+    const at = chatStore[a.uuid]?.messages?.slice(-1)[0]?.ts || 0
+    const bt = chatStore[b.uuid]?.messages?.slice(-1)[0]?.ts || 0
+    return bt - at
   })
+
   list.forEach(u=>{
-    if(filter && !u.name.toLowerCase().includes(filter.toLowerCase()) && !u.uuid.includes(filter)) return
+    const lastMsg = chatStore[u.uuid]?.messages?.slice(-1)[0]
+    const lastText = lastMsg ? lastMsg.text : 'No messages yet'
+    const lastTime = lastMsg ? new Date(lastMsg.ts).toLocaleTimeString() : ''
+    const status = u.typing ? 'Typing...' : (u.online ? 'Online' : 'Last seen: '+(u.lastSeen?new Date(u.lastSeen).toLocaleString():'Unknown'))
     const div = document.createElement('div')
-    div.className='contact'
-    if(currentPeer===u.uuid) div.classList.add('selected')
+    div.className = 'contact'+(currentPeer===u.uuid?' selected':'')
     div.innerHTML = `<img class="avatar" src="${u.avatar}">
-      <div class="meta"><div class="name">${u.name}</div>
-      <div class="last">${(chatStore[u.uuid]?.slice(-1)[0]?.text) || 'No messages yet'}</div></div>`
+      <div class="meta">
+        <div class="name">${u.name}</div>
+        <div class="last">${lastText}</div>
+        <div class="status">${status}</div>
+      </div>`
     div.addEventListener('click', ()=>openChatWith(u))
     contactsEl.appendChild(div)
   })
 }
 
-// Open chat
+// Open Chat
 function openChatWith(user){
   currentPeer = user.uuid
   peerNameEl.textContent = user.name
   peerAvatarEl.src = user.avatar
-  peerAvatarEl.style.display='block'
-  peerStatusEl.textContent='Online'
-  placeholderEl.style.display='none'
-  messagesEl.style.display='flex'
-  messagesEl.innerHTML=''
-  if(!chatStore[currentPeer]) chatStore[currentPeer]=[]
-  chatStore[currentPeer].forEach(m=>renderMessage(m.text,m.me,m.isImage,false))
+  peerStatusEl.textContent = user.online ? 'Online' : 'Offline'
+  peerAvatarEl.style.display = 'block'
+  placeholderEl.style.display = 'none'
+  messagesEl.style.display = 'flex'
+  messagesEl.innerHTML = ''
+  if(!chatStore[currentPeer]) chatStore[currentPeer] = { profile:{...user}, messages:[] }
+  chatStore[currentPeer].messages.forEach(m=>renderMessage(m.text,m.me,m.isImage,false))
   if(!pcMap[currentPeer]) createConnection(currentPeer)
   renderContacts()
   scrollToBottom()
 }
 
-// Render messages
+// Messages
 function renderMessage(text, me, isImage, animate=true){
-  const d = document.createElement('div'); d.className='msg '+(me?'me':'other')
-  if(isImage){ const img=document.createElement('img'); img.src=text; d.appendChild(img) }
-  else d.textContent=text
-  if(animate) d.style.opacity=0
+  const d = document.createElement('div')
+  d.className = 'msg '+(me?'me':'other')
+  if(isImage){ const img = document.createElement('img'); img.src=text; d.appendChild(img) }
+  else d.textContent = text
+  if(animate) d.style.opacity = 0
   messagesEl.appendChild(d)
   if(animate) requestAnimationFrame(()=>{ d.style.opacity=1 })
   scrollToBottom()
 }
-function scrollToBottom(){ messagesEl.scrollTop=messagesEl.scrollHeight }
+function scrollToBottom(){ messagesEl.scrollTop = messagesEl.scrollHeight }
 
-// WebRTC & Supabase
+// WebRTC & Supabase realtime
 async function startRealtime(){
   const pres = supabase.channel('public:presence')
   pres.on('broadcast',{event:'user-presence'}, payload=>{
     const u = payload.payload
     if(!u?.uuid) return
-    if(u.action==='join'||u.action==='update'){ online[u.uuid]=u; renderContacts() }
-    else if(u.action==='leave'){ delete online[u.uuid]; if(currentPeer===u.uuid) peerStatusEl.textContent='Offline'; renderContacts() }
+    if(u.action==='join'||u.action==='update'){
+      online[u.uuid] = {...online[u.uuid], ...u, online:true}
+      chatStore[u.uuid] = chatStore[u.uuid] || { profile:u, messages:[] }
+      renderContacts()
+    }
+    else if(u.action==='leave'){
+      if(online[u.uuid]) online[u.uuid].online=false
+      if(currentPeer===u.uuid) peerStatusEl.textContent='Offline'
+      renderContacts()
+    }
+    if(u.typing && currentPeer===u.uuid) peerStatusEl.textContent='Typing...'
   })
+
   const sig = supabase.channel('public:signaling')
   sig.on('broadcast',{event:'signal'}, async payload=>{
     const msg = payload.payload
@@ -313,15 +356,28 @@ async function startRealtime(){
     else if(msg.type==='answer') await handleAnswer(msg.from,msg.sdp)
     else if(msg.type==='candidate') await handleCandidate(msg.from,msg.candidate)
     else if(msg.type==='message') appendIncoming(msg.from,msg.data,msg.isImage)
+    else if(msg.type==='typing') setTyping(msg.from,msg.typing)
   })
+
   await pres.subscribe(); await sig.subscribe()
   broadcastPresence('join')
   setInterval(()=>broadcastPresence('update'),25000)
   window.addEventListener('beforeunload',()=>broadcastPresence('leave'))
   await fetchDriveChat()
 }
+
+// Presence
 function broadcastPresence(action){
-  supabase.channel('public:presence').send({ type:'broadcast', event:'user-presence', payload:{ uuid:myId, name:myName, avatar:myAvatar, action, ts:Date.now() } })
+  supabase.channel('public:presence').send({ type:'broadcast', event:'user-presence', payload:{
+    uuid:myId,name:myName,avatar:myAvatar,email:myEmail,action,online:true,lastSeen:Date.now()
+  }})
+}
+
+// Typing indicator
+messageInput.addEventListener('input', ()=>sendTyping(true))
+function sendTyping(isTyping){
+  if(!currentPeer) return
+  supabase.channel('public:signaling').send({ type:'broadcast', event:'signal', payload:{ type:'typing', from:myId, to:currentPeer, typing:isTyping } })
 }
 
 // WebRTC helpers
@@ -355,31 +411,32 @@ async function handleAnswer(from,sdp){ await pcMap[from]?.setRemoteDescription(n
 async function handleCandidate(from,candidate){ await pcMap[from]?.addIceCandidate(new RTCIceCandidate(candidate)) }
 function sendSignal(to,msg){ supabase.channel('public:signaling').send({ type:'broadcast', event:'signal', payload:{ ...msg, from:myId, to } }) }
 
-// Message handling (Drive-centric)
+// Message handling
 function appendIncoming(from,text,isImage){
-  if(!chatStore[from]) chatStore[from]=[]
-  chatStore[from].push({ text, me:false, isImage:!!isImage, ts:Date.now(), read:currentPeer===from })
-  if(currentPeer===from) renderMessage(text,false,!!isImage)
+  if(!chatStore[from]) chatStore[from] = { profile:online[from]||{uuid:from,name:'Contact',avatar:'https://ui-avatars.com/api/?name=User'}, messages:[] }
+  chatStore[from].messages.push({ text, me:false, isImage, ts:Date.now(), read:currentPeer===from })
+  if(currentPeer===from) renderMessage(text,false,isImage)
   else flashContact(from)
   saveToDrive()
   renderContacts()
 }
 function sendMessage(){
   if(!currentPeer) return
-  const val=messageInput.value.trim(); if(!val) return
-  if(!chatStore[currentPeer]) chatStore[currentPeer]=[]
-  chatStore[currentPeer].push({ text:val, me:true, isImage:false, ts:Date.now(), read:true })
+  const val = messageInput.value.trim(); if(!val) return
+  if(!chatStore[currentPeer]) chatStore[currentPeer]={ profile:online[currentPeer]||{}, messages:[] }
+  chatStore[currentPeer].messages.push({ text:val, me:true, isImage:false, ts:Date.now(), read:true })
   renderMessage(val,true,false)
   if(dcMap[currentPeer]?.readyState==='open') dcMap[currentPeer].send(val)
   sendSignal(currentPeer,{type:'message',data:val,isImage:false})
   messageInput.value=''
   saveToDrive()
+  sendTyping(false)
   renderContacts()
 }
 function sendImageAsMessage(dataUrl){
   if(!currentPeer) return
-  if(!chatStore[currentPeer]) chatStore[currentPeer]=[]
-  chatStore[currentPeer].push({ text:dataUrl, me:true, isImage:true, ts:Date.now(), read:true })
+  if(!chatStore[currentPeer]) chatStore[currentPeer]={ profile:online[currentPeer]||{}, messages:[] }
+  chatStore[currentPeer].messages.push({ text:dataUrl, me:true, isImage:true, ts:Date.now(), read:true })
   renderMessage(dataUrl,true,true)
   if(dcMap[currentPeer]?.readyState==='open') dcMap[currentPeer].send(dataUrl)
   sendSignal(currentPeer,{type:'message',data:dataUrl,isImage:true})
@@ -387,21 +444,26 @@ function sendImageAsMessage(dataUrl){
   renderContacts()
 }
 attachBtn.addEventListener('click',()=>{
-  const input=document.createElement('input'); input.type='file'; input.accept='image/*'
-  input.onchange=e=>{ const f=e.target.files[0]; if(!f) return
-    const r=new FileReader(); r.onload=()=>sendImageAsMessage(r.result); r.readAsDataURL(f)
+  const input = document.createElement('input'); input.type='file'; input.accept='image/*'
+  input.onchange = e => { const f = e.target.files[0]; if(!f) return
+    const r = new FileReader(); r.onload=()=>sendImageAsMessage(r.result); r.readAsDataURL(f)
   }; input.click()
 })
 sendBtn.addEventListener('click',sendMessage)
-messageInput.addEventListener('keydown',e=>{ if(e.key==='Enter') sendMessage() })
-function flashContact(id){ const el=[...contactsEl.children].find(c=>c.querySelector('.avatar')&&c.innerText.includes(id)); if(el) el.animate([{transform:'scale(1)'},{transform:'scale(1.02)'},{transform:'scale(1)'}],{duration:300}) }
+messageInput.addEventListener('keydown', e => { if(e.key==='Enter') sendMessage() })
 
-// Drive fetch & save
+function flashContact(id){
+  const el = [...contactsEl.children].find(c=>c.querySelector('.avatar')&&c.innerText.includes(id))
+  if(el) el.animate([{transform:'scale(1)'},{transform:'scale(1.02)'},{transform:'scale(1)'}],{duration:300})
+}
+
+// Drive fetch/save
 async function fetchDriveChat(){
-  if(!DRIVE_TOKEN) return
+  if(!DRIVE_TOKEN){ logoutExpired(); return }
   try{
     const listRes = await fetch(`https://www.googleapis.com/drive/v3/files?q=name='${DRIVE_FILE_NAME}' and trashed=false&fields=files(id,name)`,{ headers:{ Authorization:'Bearer '+DRIVE_TOKEN }})
     const listData = await listRes.json()
+    if(listData.error){ logoutExpired(); return }
     DRIVE_FILE_ID = listData.files?.[0]?.id || null
     if(DRIVE_FILE_ID){
       const fileRes = await fetch(`https://www.googleapis.com/drive/v3/files/${DRIVE_FILE_ID}?alt=media`,{ headers:{ Authorization:'Bearer '+DRIVE_TOKEN }})
@@ -410,28 +472,38 @@ async function fetchDriveChat(){
         if(typeof data==='object'){ chatStore=data; renderContacts() }
       }
     }
-  }catch(e){}
+  } catch(e){ logoutExpired() }
 }
+
 async function saveToDrive(){
-  if(!DRIVE_TOKEN) return
+  if(!DRIVE_TOKEN){ logoutExpired(); return }
   try{
     const metadata={ name:DRIVE_FILE_NAME, mimeType:'application/json' }
     const form=new FormData()
-    form.append('metadata',new Blob([JSON.stringify(metadata)],{type:'application/json'}))
-    form.append('file',new Blob([JSON.stringify(chatStore)],{type:'application/json'}))
+    form.append('metadata', new Blob([JSON.stringify(metadata)],{type:'application/json'}))
+    form.append('file', new Blob([JSON.stringify(chatStore)],{type:'application/json'}))
     const uploadUrl = DRIVE_FILE_ID ? `https://www.googleapis.com/upload/drive/v3/files/${DRIVE_FILE_ID}?uploadType=multipart` : `https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart`
     const res = await fetch(uploadUrl,{ method: DRIVE_FILE_ID?'PATCH':'POST', headers:{ Authorization:'Bearer '+DRIVE_TOKEN }, body:form })
-    if(res.ok){ const j=await res.json(); DRIVE_FILE_ID=j.id||DRIVE_FILE_ID }
-  }catch(e){}
+    if(res.ok){ const j = await res.json(); DRIVE_FILE_ID = j.id || DRIVE_FILE_ID }
+    else if(res.status===401){ logoutExpired() }
+  } catch(e){ logoutExpired() }
 }
 
-// Initialize
+// Logout on expired token
+function logoutExpired(){
+  localStorage.removeItem(storageProfileKey)
+  location.href='register.html'
+}
+
+// Init
 startRealtime()
 </script>
 
 
+
 </body>
 </html>
+
 
 
 
