--- a/home.html
+++ b/home.html
@@ -198,7 +198,7 @@ body{
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
 const SUPABASE_URL = 'https://dfzshvldanqfvfivjrqi.supabase.co'
-const SUPABASE_KEY = 'YOUR_SUPABASE_ANON_KEY'
+const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA'
 const supabase = createClient(SUPABASE_URL, SUPABASE_KEY)
 
 const storageProfileKey = 'hc_profile'
@@ -503,6 +503,7 @@ startRealtime()
 
 </body>
 </html>
+
 
 
 
