--- a/home.html
+++ b/home.html
@@ -204,17 +204,16 @@ const supabase = createClient(SUPABASE_URL, SUPABASE_KEY)
 const storageProfileKey = 'hc_profile'
 const DRIVE_FILE_NAME = 'chat.json'
 
-// Check profile
 const profile = JSON.parse(localStorage.getItem(storageProfileKey) || 'null')
-if(!profile){ location.href='register.html'; throw new Error('No profile found') }
+if(!profile){ location.href='register.html'; throw new Error('No profile') }
 
 const myId = profile.id
 const myName = profile.name
 const myEmail = profile.email || ''
-const myAvatar = profile.avatar || 'https://ui-avatars.com/api/?name=' + encodeURIComponent(myName)
+const myAvatar = profile.avatar || 'https://ui-avatars.com/api/?name=' + encodeURIComponent(profile.name)
 const DRIVE_TOKEN = profile.token || null
 let DRIVE_FILE_ID = null
-let chatStore = {} // main Drive database
+let chatStore = {} // main data from Drive
 
 // DOM
 const contactsEl = document.getElementById('contacts')
@@ -229,24 +228,35 @@ const messagesEl = document.getElementById('messages')
 const messageInput = document.getElementById('messageInput')
 const sendBtn = document.getElementById('sendBtn')
 const attachBtn = document.getElementById('attach')
-const yourChatsTab = document.getElementById('tab-chats')
-const onlineUsersTab = document.getElementById('tab-online')
+const tabsEl = document.getElementById('tabs')
+const onlineTabBtn = document.getElementById('tab-online')
+const chatsTabBtn = document.getElementById('tab-chats')
 
 let online = {}
+let currentPeer = null
 let pcMap = {}
 let dcMap = {}
-let currentPeer = null
+let typingStatus = {}
 
-// Initialize profile display
+// Set profile
 document.getElementById('myAvatar').src = myAvatar
 document.getElementById('myName').textContent = myName
 
-// Tabs switching
-yourChatsTab.addEventListener('click', ()=>renderContacts('chats'))
-onlineUsersTab.addEventListener('click', ()=>renderContacts('online'))
+// Tab switching
+onlineTabBtn.addEventListener('click',()=>renderContacts('','online'))
+chatsTabBtn.addEventListener('click',()=>renderContacts('','chats'))
 
-// Search
-searchEl.addEventListener('input', ()=>renderContacts())
+// Contact search
+searchEl.addEventListener('input', ()=>renderContacts(searchEl.value.trim()))
+
+// Add contact manually
+addBtn.addEventListener('click', ()=>{
+  const id = searchEl.value.trim()
+  if(!id || id===myId) return
+  if(!chatStore[id]) chatStore[id] = { profile:{uuid:id,name:'Contact',avatar:'https://ui-avatars.com/api/?name=User',email:''}, messages:[] }
+  saveToDrive()
+  renderContacts()
+})
 
 // Logout
 logoutBtn.addEventListener('click', ()=>{
@@ -254,100 +264,89 @@ logoutBtn.addEventListener('click', ()=>{
   location.href='register.html'
 })
 
-// Add Contact
-addBtn.addEventListener('click', ()=> {
-  const id = searchEl.value.trim()
-  if(!id || id===myId) return
-  if(!online[id]) online[id] = { uuid:id, name:'Contact', avatar:'https://ui-avatars.com/api/?name=User', email:'unknown', lastSeen:0, typing:false }
-  renderContacts()
-})
-
 // Render contacts
-function renderContacts(type=''){
-  contactsEl.innerHTML = ''
-  const users = Object.values(online)
-  let list = []
-  if(type==='chats'){
-    list = users.filter(u => chatStore[u.uuid]?.messages?.length)
-  } else if(type==='online'){
-    list = users.filter(u => u.uuid!==myId)
-  } else {
-    list = users
-  }
-
-  list.sort((a,b)=>{
-    const at = chatStore[a.uuid]?.messages?.slice(-1)[0]?.ts || 0
-    const bt = chatStore[b.uuid]?.messages?.slice(-1)[0]?.ts || 0
-    return bt - at
+function renderContacts(filter='', tab='chats'){
+  contactsEl.innerHTML=''
+  const list = Object.values(chatStore)
+  .filter(c=>{
+    if(tab==='online') return online[c.profile.uuid]
+    else return true
   })
-
-  list.forEach(u=>{
-    const lastMsg = chatStore[u.uuid]?.messages?.slice(-1)[0]
-    const lastText = lastMsg ? lastMsg.text : 'No messages yet'
-    const lastTime = lastMsg ? new Date(lastMsg.ts).toLocaleTimeString() : ''
-    const status = u.typing ? 'Typing...' : (u.online ? 'Online' : 'Last seen: '+(u.lastSeen?new Date(u.lastSeen).toLocaleString():'Unknown'))
-    const div = document.createElement('div')
-    div.className = 'contact'+(currentPeer===u.uuid?' selected':'')
+  .filter(c=>!filter || c.profile.name.toLowerCase().includes(filter.toLowerCase()) || c.profile.uuid.includes(filter))
+  .sort((a,b)=>{
+    const at = (a.messages?.slice(-1)[0]?.ts)||0
+    const bt = (b.messages?.slice(-1)[0]?.ts)||0
+    return bt-at
+  })
+  list.forEach(c=>{
+    const u = c.profile
+    const div = document.createElement('div'); div.className='contact'
+    if(currentPeer===u.uuid) div.classList.add('selected')
+    const lastMsg = c.messages?.slice(-1)[0]?.text || 'No messages yet'
+    const status = online[u.uuid]?'Online':(c.lastSeen?`Last seen ${new Date(c.lastSeen).toLocaleTimeString()}`:'Offline')
     div.innerHTML = `<img class="avatar" src="${u.avatar}">
       <div class="meta">
         <div class="name">${u.name}</div>
-        <div class="last">${lastText}</div>
+        <div class="last">${lastMsg}</div>
         <div class="status">${status}</div>
       </div>`
-    div.addEventListener('click', ()=>openChatWith(u))
+    div.addEventListener('click', ()=>openChatWith(u.uuid))
     contactsEl.appendChild(div)
   })
 }
 
-// Open Chat
-function openChatWith(user){
-  currentPeer = user.uuid
-  peerNameEl.textContent = user.name
-  peerAvatarEl.src = user.avatar
-  peerStatusEl.textContent = user.online ? 'Online' : 'Offline'
-  peerAvatarEl.style.display = 'block'
-  placeholderEl.style.display = 'none'
-  messagesEl.style.display = 'flex'
-  messagesEl.innerHTML = ''
-  if(!chatStore[currentPeer]) chatStore[currentPeer] = { profile:{...user}, messages:[] }
-  chatStore[currentPeer].messages.forEach(m=>renderMessage(m.text,m.me,m.isImage,false))
-  if(!pcMap[currentPeer]) createConnection(currentPeer)
+// Open chat
+function openChatWith(peerId){
+  currentPeer = peerId
+  const peer = chatStore[peerId].profile
+  peerNameEl.textContent = peer.name
+  peerAvatarEl.src = peer.avatar
+  peerAvatarEl.style.display='block'
+  peerStatusEl.textContent = online[peerId]?'Online':(chatStore[peerId].lastSeen?`Last seen ${new Date(chatStore[peerId].lastSeen).toLocaleTimeString()}`:'Offline')
+  placeholderEl.style.display='none'
+  messagesEl.style.display='flex'
+  messagesEl.innerHTML=''
+  chatStore[peerId].messages.forEach(m=>renderMessage(m.text,m.me,m.isImage,false))
+  if(!pcMap[peerId]) createConnection(peerId)
   renderContacts()
   scrollToBottom()
 }
 
-// Messages
-function renderMessage(text, me, isImage, animate=true){
-  const d = document.createElement('div')
-  d.className = 'msg '+(me?'me':'other')
-  if(isImage){ const img = document.createElement('img'); img.src=text; d.appendChild(img) }
-  else d.textContent = text
-  if(animate) d.style.opacity = 0
+// Render message
+function renderMessage(text,me,isImage,animate=true){
+  const d = document.createElement('div'); d.className='msg '+(me?'me':'other')
+  if(isImage){ const img=document.createElement('img'); img.src=text; d.appendChild(img) }
+  else d.textContent=text
+  if(animate) d.style.opacity=0
   messagesEl.appendChild(d)
   if(animate) requestAnimationFrame(()=>{ d.style.opacity=1 })
   scrollToBottom()
 }
-function scrollToBottom(){ messagesEl.scrollTop = messagesEl.scrollHeight }
+function scrollToBottom(){ messagesEl.scrollTop=messagesEl.scrollHeight }
 
-// WebRTC & Supabase realtime
+// Typing indicator
+messageInput.addEventListener('input',()=>{
+  if(!currentPeer) return
+  sendSignal(currentPeer,{type:'typing'})
+})
+function showTyping(peerId){
+  peerStatusEl.textContent = 'Typing...'
+  clearTimeout(typingStatus[peerId])
+  typingStatus[peerId] = setTimeout(()=>{
+    peerStatusEl.textContent = online[peerId]?'Online':(chatStore[peerId].lastSeen?`Last seen ${new Date(chatStore[peerId].lastSeen).toLocaleTimeString()}`:'Offline')
+  },1000)
+}
+
+// WebRTC + Supabase
 async function startRealtime(){
+  if(!DRIVE_TOKEN){ logoutInvalidToken(); return }
   const pres = supabase.channel('public:presence')
   pres.on('broadcast',{event:'user-presence'}, payload=>{
     const u = payload.payload
     if(!u?.uuid) return
-    if(u.action==='join'||u.action==='update'){
-      online[u.uuid] = {...online[u.uuid], ...u, online:true}
-      chatStore[u.uuid] = chatStore[u.uuid] || { profile:u, messages:[] }
-      renderContacts()
-    }
-    else if(u.action==='leave'){
-      if(online[u.uuid]) online[u.uuid].online=false
-      if(currentPeer===u.uuid) peerStatusEl.textContent='Offline'
-      renderContacts()
-    }
-    if(u.typing && currentPeer===u.uuid) peerStatusEl.textContent='Typing...'
+    if(u.action==='join'||u.action==='update'){ online[u.uuid]=true; chatStore[u.uuid] = chatStore[u.uuid] || { profile:u, messages:[] }; renderContacts() }
+    else if(u.action==='leave'){ online[u.uuid]=false; chatStore[u.uuid].lastSeen=Date.now(); renderContacts() }
   })
-
   const sig = supabase.channel('public:signaling')
   sig.on('broadcast',{event:'signal'}, async payload=>{
     const msg = payload.payload
@@ -356,28 +355,16 @@ async function startRealtime(){
     else if(msg.type==='answer') await handleAnswer(msg.from,msg.sdp)
     else if(msg.type==='candidate') await handleCandidate(msg.from,msg.candidate)
     else if(msg.type==='message') appendIncoming(msg.from,msg.data,msg.isImage)
-    else if(msg.type==='typing') setTyping(msg.from,msg.typing)
+    else if(msg.type==='typing') showTyping(msg.from)
   })
-
   await pres.subscribe(); await sig.subscribe()
   broadcastPresence('join')
   setInterval(()=>broadcastPresence('update'),25000)
   window.addEventListener('beforeunload',()=>broadcastPresence('leave'))
   await fetchDriveChat()
 }
-
-// Presence
 function broadcastPresence(action){
-  supabase.channel('public:presence').send({ type:'broadcast', event:'user-presence', payload:{
-    uuid:myId,name:myName,avatar:myAvatar,email:myEmail,action,online:true,lastSeen:Date.now()
-  }})
-}
-
-// Typing indicator
-messageInput.addEventListener('input', ()=>sendTyping(true))
-function sendTyping(isTyping){
-  if(!currentPeer) return
-  supabase.channel('public:signaling').send({ type:'broadcast', event:'signal', payload:{ type:'typing', from:myId, to:currentPeer, typing:isTyping } })
+  supabase.channel('public:presence').send({type:'broadcast',event:'user-presence',payload:{uuid:myId,name:myName,email:myEmail,avatar:myAvatar,action,ts:Date.now()}})
 }
 
 // WebRTC helpers
@@ -410,33 +397,53 @@ async function handleOffer(from,sdp){
 async function handleAnswer(from,sdp){ await pcMap[from]?.setRemoteDescription(new RTCSessionDescription(sdp)) }
 async function handleCandidate(from,candidate){ await pcMap[from]?.addIceCandidate(new RTCIceCandidate(candidate)) }
 function sendSignal(to,msg){ supabase.channel('public:signaling').send({ type:'broadcast', event:'signal', payload:{ ...msg, from:myId, to } }) }
+// Generate unique message ID
+function generateMsgId(text, ts, me){
+  return btoa(`${text}-${ts}-${me ? 'me' : 'peer'}`) // simple base64 hash
+}
 
-// Message handling
-function appendIncoming(from,text,isImage){
-  if(!chatStore[from]) chatStore[from] = { profile:online[from]||{uuid:from,name:'Contact',avatar:'https://ui-avatars.com/api/?name=User'}, messages:[] }
-  chatStore[from].messages.push({ text, me:false, isImage, ts:Date.now(), read:currentPeer===from })
-  if(currentPeer===from) renderMessage(text,false,isImage)
+// Append incoming message without duplication
+function appendIncoming(from,text,isImage, ts=null){
+  if(!chatStore[from]) chatStore[from]={ profile:{uuid:from,name:'Contact',avatar:'https://ui-avatars.com/api/?name=User',email:''}, messages:[] }
+  ts = ts || Date.now()
+  const msgId = generateMsgId(text, ts, false)
+  // check if message already exists
+  if(chatStore[from].messages.some(m=>m.id===msgId)) return
+  chatStore[from].messages.push({ id: msgId, text, me:false, isImage:!!isImage, ts })
+  if(currentPeer===from) renderMessage(text,false,!!isImage)
   else flashContact(from)
   saveToDrive()
   renderContacts()
 }
+
+// Sending messages
 function sendMessage(){
   if(!currentPeer) return
-  const val = messageInput.value.trim(); if(!val) return
-  if(!chatStore[currentPeer]) chatStore[currentPeer]={ profile:online[currentPeer]||{}, messages:[] }
-  chatStore[currentPeer].messages.push({ text:val, me:true, isImage:false, ts:Date.now(), read:true })
+  const val=messageInput.value.trim(); if(!val) return
+  const ts = Date.now()
+  const msgId = generateMsgId(val, ts, true)
+  chatStore[currentPeer].messages.push({ id: msgId, text:val, me:true, isImage:false, ts })
   renderMessage(val,true,false)
-  if(dcMap[currentPeer]?.readyState==='open') dcMap[currentPeer].send(val)
-  sendSignal(currentPeer,{type:'message',data:val,isImage:false})
+  if(dcMap[currentPeer]?.readyState==='open') dcMap[currentPeer].send(JSON.stringify({ text: val, isImage:false, ts, id: msgId }))
+  sendSignal(currentPeer,{type:'message',data:val,isImage:false, ts, id: msgId})
   messageInput.value=''
   saveToDrive()
-  sendTyping(false)
   renderContacts()
 }
+
+sig.on('broadcast',{event:'signal'}, async payload=>{
+  const msg = payload.payload
+  if(!msg||msg.to!==myId) return
+  if(msg.type==='offer') await handleOffer(msg.from,msg.sdp)
+  else if(msg.type==='answer') await handleAnswer(msg.from,msg.sdp)
+  else if(msg.type==='candidate') await handleCandidate(msg.from,msg.candidate)
+  else if(msg.type==='message') appendIncoming(msg.from, msg.data, msg.isImage, msg.ts) // pass timestamp
+  else if(msg.type==='typing') showTyping(msg.from)
+})
+
 function sendImageAsMessage(dataUrl){
   if(!currentPeer) return
-  if(!chatStore[currentPeer]) chatStore[currentPeer]={ profile:online[currentPeer]||{}, messages:[] }
-  chatStore[currentPeer].messages.push({ text:dataUrl, me:true, isImage:true, ts:Date.now(), read:true })
+  chatStore[currentPeer].messages.push({ text:dataUrl, me:true, isImage:true, ts:Date.now() })
   renderMessage(dataUrl,true,true)
   if(dcMap[currentPeer]?.readyState==='open') dcMap[currentPeer].send(dataUrl)
   sendSignal(currentPeer,{type:'message',data:dataUrl,isImage:true})
@@ -444,65 +451,54 @@ function sendImageAsMessage(dataUrl){
   renderContacts()
 }
 attachBtn.addEventListener('click',()=>{
-  const input = document.createElement('input'); input.type='file'; input.accept='image/*'
-  input.onchange = e => { const f = e.target.files[0]; if(!f) return
-    const r = new FileReader(); r.onload=()=>sendImageAsMessage(r.result); r.readAsDataURL(f)
+  const input=document.createElement('input'); input.type='file'; input.accept='image/*'
+  input.onchange=e=>{ const f=e.target.files[0]; if(!f) return
+    const r=new FileReader(); r.onload=()=>sendImageAsMessage(r.result); r.readAsDataURL(f)
   }; input.click()
 })
 sendBtn.addEventListener('click',sendMessage)
-messageInput.addEventListener('keydown', e => { if(e.key==='Enter') sendMessage() })
+messageInput.addEventListener('keydown',e=>{ if(e.key==='Enter') sendMessage() })
+function flashContact(id){ const el=[...contactsEl.children].find(c=>c.querySelector('.avatar')&&c.innerText.includes(id)); if(el) el.animate([{transform:'scale(1)'},{transform:'scale(1.02)'},{transform:'scale(1)'}],{duration:300}) }
 
-function flashContact(id){
-  const el = [...contactsEl.children].find(c=>c.querySelector('.avatar')&&c.innerText.includes(id))
-  if(el) el.animate([{transform:'scale(1)'},{transform:'scale(1.02)'},{transform:'scale(1)'}],{duration:300})
-}
-
-// Drive fetch/save
+// Drive fetch & save
 async function fetchDriveChat(){
-  if(!DRIVE_TOKEN){ logoutExpired(); return }
+  if(!DRIVE_TOKEN){ logoutInvalidToken(); return }
   try{
     const listRes = await fetch(`https://www.googleapis.com/drive/v3/files?q=name='${DRIVE_FILE_NAME}' and trashed=false&fields=files(id,name)`,{ headers:{ Authorization:'Bearer '+DRIVE_TOKEN }})
     const listData = await listRes.json()
-    if(listData.error){ logoutExpired(); return }
     DRIVE_FILE_ID = listData.files?.[0]?.id || null
     if(DRIVE_FILE_ID){
       const fileRes = await fetch(`https://www.googleapis.com/drive/v3/files/${DRIVE_FILE_ID}?alt=media`,{ headers:{ Authorization:'Bearer '+DRIVE_TOKEN }})
       if(fileRes.ok){
         const data = await fileRes.json().catch(()=>({}))
         if(typeof data==='object'){ chatStore=data; renderContacts() }
-      }
-    }
-  } catch(e){ logoutExpired() }
+      } else { logoutInvalidToken() }
+    } else { saveToDrive() } // new file
+  }catch(e){ logoutInvalidToken() }
 }
-
 async function saveToDrive(){
-  if(!DRIVE_TOKEN){ logoutExpired(); return }
+  if(!DRIVE_TOKEN){ logoutInvalidToken(); return }
   try{
     const metadata={ name:DRIVE_FILE_NAME, mimeType:'application/json' }
     const form=new FormData()
-    form.append('metadata', new Blob([JSON.stringify(metadata)],{type:'application/json'}))
-    form.append('file', new Blob([JSON.stringify(chatStore)],{type:'application/json'}))
+    form.append('metadata',new Blob([JSON.stringify(metadata)],{type:'application/json'}))
+    form.append('file',new Blob([JSON.stringify(chatStore)],{type:'application/json'}))
     const uploadUrl = DRIVE_FILE_ID ? `https://www.googleapis.com/upload/drive/v3/files/${DRIVE_FILE_ID}?uploadType=multipart` : `https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart`
     const res = await fetch(uploadUrl,{ method: DRIVE_FILE_ID?'PATCH':'POST', headers:{ Authorization:'Bearer '+DRIVE_TOKEN }, body:form })
-    if(res.ok){ const j = await res.json(); DRIVE_FILE_ID = j.id || DRIVE_FILE_ID }
-    else if(res.status===401){ logoutExpired() }
-  } catch(e){ logoutExpired() }
+    if(res.ok){ const j=await res.json(); DRIVE_FILE_ID=j.id||DRIVE_FILE_ID }
+    else { logoutInvalidToken() }
+  }catch(e){ logoutInvalidToken() }
 }
+function logoutInvalidToken(){ localStorage.removeItem(storageProfileKey); location.href='register.html' }
 
-// Logout on expired token
-function logoutExpired(){
-  localStorage.removeItem(storageProfileKey)
-  location.href='register.html'
-}
-
-// Init
+// Initialize
 startRealtime()
 </script>
 
 
-
 </body>
 </html>
+
 
 
 
