--- a/home.html
+++ b/home.html
@@ -18,48 +18,85 @@
   --radius:14px;
 }
 *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,'Helvetica Neue',Arial;}
-html,body{height:100%;}
-body{background: linear-gradient(180deg, #f6fbff 0%, #e6eefc 100%); display:flex;align-items:center;justify-content:center;height:100vh;overflow:hidden; padding:24px;}
-.app { width:100%; max-width:1100px; height:100%; max-height:800px; background:transparent; display:grid; grid-template-columns: 320px 1fr; gap:20px; align-items:stretch; }
-.panel { background:var(--side); border-radius:var(--radius); box-shadow:var(--shadow); overflow:hidden; display:flex; flex-direction:column; }
-.panel .header { padding:18px 16px; display:flex; align-items:center; gap:12px; border-bottom:1px solid rgba(15,23,42,0.04); }
-.panel .header .title{ font-weight:700;color:#0f172a; font-size:16px; }
-.panel .header .subtitle{ color:var(--muted);font-size:12px;margin-top:4px; }
-.search { padding:12px 14px;border-bottom:1px solid rgba(15,23,42,0.04); display:flex;gap:8px;align-items:center; }
-.search input{ flex:1;border-radius:12px;padding:10px 12px;border:1px solid rgba(15,23,42,0.06); outline:none;background:#fbfdff;font-size:14px;color:#071133; transition:box-shadow .18s ease; }
+html,body{height:100%;overflow:hidden;}
+body{
+  background:linear-gradient(180deg,#f6fbff 0%,#e6eefc 100%);
+  display:flex;align-items:center;justify-content:center;
+  height:100vh;overflow:hidden;padding:24px;
+}
+.app{
+  width:100%;max-width:1100px;
+  height:100%;max-height:800px;
+  display:grid;grid-template-columns:320px 1fr;gap:20px;
+}
+.panel{
+  background:var(--side);border-radius:var(--radius);
+  box-shadow:var(--shadow);
+  display:flex;flex-direction:column;overflow:hidden;
+}
+.panel .header{padding:18px 16px;display:flex;align-items:center;gap:12px;border-bottom:1px solid rgba(15,23,42,0.04);}
+.panel .title{font-weight:700;color:#0f172a;font-size:16px;}
+.panel .subtitle{color:var(--muted);font-size:12px;margin-top:4px;}
+.search{padding:12px 14px;border-bottom:1px solid rgba(15,23,42,0.04);display:flex;gap:8px;align-items:center;}
+.search input{flex:1;border-radius:12px;padding:10px 12px;border:1px solid rgba(15,23,42,0.06);outline:none;background:#fbfdff;font-size:14px;color:#071133;transition:box-shadow .18s ease;}
 .search input:focus{box-shadow:0 6px 18px rgba(43,156,255,0.12);border-color:var(--primary-600);}
-.list { padding:12px; flex:1; overflow:auto; display:flex; flex-direction:column; gap:8px; }
-.contact { display:flex;align-items:center;gap:12px;padding:10px;border-radius:12px;cursor:pointer; transition:background .12s ease, transform .12s ease; }
-.contact:hover{ background:rgba(43,156,255,0.04); transform:translateY(-2px);}
-.contact.selected{ background:linear-gradient(90deg,var(--primary) 0%, var(--primary-600) 100%); color:white; box-shadow:0 10px 30px rgba(43,156,255,0.12); }
-.avatar{ width:48px;height:48px;border-radius:50%;flex-shrink:0;object-fit:cover;box-shadow:0 6px 18px rgba(2,6,23,0.06); }
-.meta{ display:flex;flex-direction:column; gap:4px; min-width:0; }
-.meta .name{ font-weight:600; font-size:15px; color:#071133; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
-.contact.selected .name{ color:white; }
-.meta .last{ color:var(--muted); font-size:13px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
-.contact.selected .last{ color:rgba(255,255,255,0.9); }
-.chat { background:linear-gradient(180deg,#ffffff, #f7fbff); border-radius:var(--radius); box-shadow:var(--shadow); overflow:hidden;display:flex;flex-direction:column; }
-.chat .top { padding:14px 18px;display:flex;align-items:center;gap:12px;border-bottom:1px solid rgba(15,23,42,0.04); }
-.chat .top img{ width:44px;height:44px;border-radius:50%;object-fit:cover; display:block; }
-.chat .top .who{ display:flex;flex-direction:column;}
-.chat .top .who .n{ font-weight:700; color:#071133; }
-.chat .top .who .s{ font-size:13px;color:var(--muted); }
-.chat .body { padding:20px; flex:1; overflow:auto; display:flex; flex-direction:column; gap:10px; background:linear-gradient(180deg,#f7fbff00,#ffffff00); }
-.messages{ display:flex; flex-direction:column; gap:8px; width:100%; max-width:820px; margin-top:auto; margin-bottom:auto;}
-.msg { display:inline-block; max-width:72%; padding:12px 14px; border-radius:18px; font-size:15px; line-height:1.3; box-shadow:0 6px 20px rgba(2,6,23,0.06); opacity:0; transform:translateY(8px); animation:pop .22s ease forwards; }
-@keyframes pop{ to{ opacity:1; transform:none; } }
-.msg.me{ background:linear-gradient(180deg,var(--primary),var(--primary-600)); color:white; align-self:flex-end; border-bottom-right-radius:6px;}
-.msg.other{ background:#fff; color:#071133; align-self:flex-start; border-bottom-left-radius:6px;}
-.msg img{ max-width:300px;border-radius:12px; display:block; }
-.time{ font-size:11px;color:var(--muted); margin-top:6px; opacity:0.9;}
-.composer { padding:12px; border-top:1px solid rgba(15,23,42,0.04); display:flex; gap:8px; align-items:center; background:linear-gradient(180deg, #ffffff, #f7fbff); }
-.input { flex:1; background:#f3f6ff; padding:10px 14px; border-radius:999px; display:flex; gap:8px; align-items:center; box-shadow: inset 0 1px 0 rgba(255,255,255,0.6); }
-.input input{ flex:1; border:none; background:transparent; outline:none; font-size:15px; color:#071133;}
-.icon-btn{ width:44px; height:44px; border-radius:50%; display:flex; align-items:center; justify-content:center; cursor:pointer; border:none; background:transparent; color:var(--primary); font-size:18px; }
-.send{ width:48px;height:44px;border-radius:12px; display:flex;align-items:center;justify-content:center;background:linear-gradient(180deg,var(--primary),var(--primary-600)); color:white; font-size:18px; border:none; cursor:pointer; box-shadow:0 10px 24px rgba(43,156,255,0.14); }
-.placeholder{ display:flex; align-items:center; justify-content:center; color:var(--muted); font-size:15px;}
-@media (max-width:900px){ .app{ grid-template-columns: 1fr; gap:12px; align-items:stretch; max-width:720px; padding:12px; } .panel{ order:2; height:38vh; border-radius:12px; } .chat{ order:1; height:60vh; border-radius:12px; } }
+.list{padding:12px;flex:1;overflow-y:auto;display:flex;flex-direction:column;gap:8px;scroll-behavior:smooth;}
+.contact{display:flex;align-items:center;gap:12px;padding:10px;border-radius:12px;cursor:pointer;transition:background .12s ease,transform .12s ease;}
+.contact:hover{background:rgba(43,156,255,0.04);transform:translateY(-2px);}
+.contact.selected{background:linear-gradient(90deg,var(--primary) 0%,var(--primary-600) 100%);color:white;box-shadow:0 10px 30px rgba(43,156,255,0.12);}
+.avatar{width:48px;height:48px;border-radius:50%;object-fit:cover;box-shadow:0 6px 18px rgba(2,6,23,0.06);}
+.meta{display:flex;flex-direction:column;gap:4px;min-width:0;}
+.meta .name{font-weight:600;font-size:15px;color:#071133;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.contact.selected .name{color:white;}
+.meta .last{color:var(--muted);font-size:13px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.contact.selected .last{color:rgba(255,255,255,0.9);}
+.chat{
+  background:linear-gradient(180deg,#ffffff,#f7fbff);
+  border-radius:var(--radius);box-shadow:var(--shadow);
+  display:flex;flex-direction:column;overflow:hidden;
+}
+.chat .top{padding:14px 18px;display:flex;align-items:center;gap:12px;border-bottom:1px solid rgba(15,23,42,0.04);}
+.chat .top img{width:44px;height:44px;border-radius:50%;object-fit:cover;}
+.chat .who{display:flex;flex-direction:column;}
+.chat .n{font-weight:700;color:#071133;}
+.chat .s{font-size:13px;color:var(--muted);}
+.chat .body{
+  flex:1;overflow-y:auto;
+  padding:20px;display:flex;flex-direction:column;
+  background:linear-gradient(180deg,#f7fbff00,#ffffff00);
+  scroll-behavior:smooth;
+  min-height:0; 
+}
+.messages{
+  display:flex;flex-direction:column;gap:8px;
+  width:100%;margin-top:auto;margin-bottom:auto;
+}
+.msg{display:inline-block;max-width:72%;padding:12px 14px;border-radius:18px;font-size:15px;line-height:1.3;box-shadow:0 6px 20px rgba(2,6,23,0.06);opacity:0;transform:translateY(8px);animation:pop .22s ease forwards;}
+@keyframes pop{to{opacity:1;transform:none;}}
+.msg.me{background:linear-gradient(180deg,var(--primary),var(--primary-600));color:white;align-self:flex-end;border-bottom-right-radius:6px;}
+.msg.other{background:#fff;color:#071133;align-self:flex-start;border-bottom-left-radius:6px;}
+.msg img{max-width:300px;border-radius:12px;display:block;}
+.placeholder{display:flex;align-items:center;justify-content:center;color:var(--muted);font-size:15px;}
+.composer{
+  padding:12px;border-top:1px solid rgba(15,23,42,0.04);
+  display:flex;gap:8px;align-items:center;
+  background:linear-gradient(180deg,#ffffff,#f7fbff);
+}
+.input{flex:1;background:#f3f6ff;padding:10px 14px;border-radius:999px;display:flex;gap:8px;align-items:center;box-shadow:inset 0 1px 0 rgba(255,255,255,0.6);}
+.input input{flex:1;border:none;background:transparent;outline:none;font-size:15px;color:#071133;}
+.icon-btn{width:44px;height:44px;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;border:none;background:transparent;color:var(--primary);font-size:18px;}
+.send{width:48px;height:44px;border-radius:12px;display:flex;align-items:center;justify-content:center;background:linear-gradient(180deg,var(--primary),var(--primary-600));color:white;font-size:18px;border:none;cursor:pointer;box-shadow:0 10px 24px rgba(43,156,255,0.14);}
+
+@media (max-width:900px){
+  body{padding:12px;}
+  .app{grid-template-columns:1fr;gap:12px;max-width:720px;height:100%;max-height:none;}
+  .panel{order:2;min-height:35vh;max-height:40vh;border-radius:12px;overflow-y:auto;}
+  .chat{order:1;min-height:55vh;max-height:65vh;display:flex;flex-direction:column;}
+  .chat .body{flex:1;overflow-y:auto;-webkit-overflow-scrolling:touch;scroll-behavior:smooth;}
+  .messages{margin-bottom:auto;}
+}
 </style>
+
 </head>
 <body>
 <div class="app" id="app">
@@ -115,17 +152,13 @@ const storageProfileKey='hc_profile', DRIVE_FILE_NAME='chat.json'
 const profile=JSON.parse(localStorage.getItem(storageProfileKey)||'null')
 if(!profile){location.href='register.html';throw new Error('No profile')}
 const myId=profile.id,myName=profile.name,myEmail=profile.email||'',myAvatar=profile.avatar||`https://ui-avatars.com/api/?name=${encodeURIComponent(profile.name)}`,DRIVE_TOKEN=profile.token||null
-let DRIVE_FILE_ID=null, chatStore={}; // main data
-
-// DOM
+let DRIVE_FILE_ID=null, chatStore={}; 
 const contactsEl=document.getElementById('contacts'), searchEl=document.getElementById('search'), addBtn=document.getElementById('addBtn'), logoutBtn=document.getElementById('logout'), peerAvatarEl=document.getElementById('peerAvatar'), peerNameEl=document.getElementById('peerName'), peerStatusEl=document.getElementById('peerStatus'), placeholderEl=document.getElementById('placeholder'), messagesEl=document.getElementById('messages'), messageInput=document.getElementById('messageInput'), sendBtn=document.getElementById('sendBtn'), attachBtn=document.getElementById('attach')
 let online={},currentPeer=null,pcMap={},dcMap={},typingStatus={}
 
-// Profile
 document.getElementById('myAvatar').src=myAvatar
 document.getElementById('myName').textContent=myName
 
-// Contacts
 searchEl.addEventListener('input',()=>renderContacts(searchEl.value.trim()))
 addBtn.addEventListener('click',()=>{
   const id=searchEl.value.trim(); if(!id||id===myId) return
@@ -170,7 +203,6 @@ function scrollToBottom(){ messagesEl.scrollTop=messagesEl.scrollHeight }
 messageInput.addEventListener('input',()=>{ if(currentPeer) sendSignal(currentPeer,{type:'typing'}) })
 function showTyping(peerId){ peerStatusEl.textContent='Typing...'; clearTimeout(typingStatus[peerId]); typingStatus[peerId]=setTimeout(()=>{ peerStatusEl.textContent=online[peerId]?'Online':(chatStore[peerId].lastSeen?`Last seen ${new Date(chatStore[peerId].lastSeen).toLocaleTimeString()}`:'Offline') },1000) }
 
-// Messaging
 function generateMsgId(text,ts,me){ return btoa(`${text}-${ts}-${me?'me':'peer'}`) }
 function appendIncoming(from,text,isImage,ts=null,id=null){
   if(!chatStore[from]) chatStore[from]={ profile:{uuid:from,name:'Contact',avatar:`https://ui-avatars.com/api/?name=User`,email:''}, messages:[] }
@@ -207,7 +239,6 @@ attachBtn.addEventListener('click',()=>{ const input=document.createElement('inp
 
 function flashContact(id){ const el=[...contactsEl.children].find(c=>c.querySelector('.avatar')&&c.innerText.includes(id)); if(el) el.animate([{transform:'scale(1)'},{transform:'scale(1.02)'},{transform:'scale(1)'}],{duration:300}) }
 
-// WebRTC & Supabase
 async function startRealtime(){
   if(!DRIVE_TOKEN){ logoutInvalidToken(); return }
   const pres=supabase.channel('public:presence')
@@ -233,7 +264,6 @@ async function startRealtime(){
 }
 function broadcastPresence(action){ supabase.channel('public:presence').send({type:'broadcast',event:'user-presence',payload:{uuid:myId,name:myName,email:myEmail,avatar:myAvatar,action,ts:Date.now()}}) }
 
-// WebRTC helpers
 function createConnection(peer){
   const pc=new RTCPeerConnection(), dc=pc.createDataChannel('chat')
   dc.onmessage=ev=>{ const d=JSON.parse(ev.data); appendIncoming(peer,d.text,d.isImage,d.ts,d.id) }
@@ -248,7 +278,6 @@ async function handleAnswer(from,sdp){ await pcMap[from]?.setRemoteDescription(n
 async function handleCandidate(from,candidate){ await pcMap[from]?.addIceCandidate(new RTCIceCandidate(candidate)) }
 function sendSignal(to,msg){ supabase.channel('public:signaling').send({type:'broadcast',event:'signal',payload:{...msg,from:myId,to}}) }
 
-// Drive
 async function fetchDriveChat(){
   if(!DRIVE_TOKEN){ logoutInvalidToken(); return }
   try{
@@ -274,8 +303,8 @@ async function saveToDrive(){
 }
 function logoutInvalidToken(){ localStorage.removeItem(storageProfileKey); location.href='register.html' }
 
-// Init
 startRealtime()
 </script>
 </body>
 </html>
+
